--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -51,6 +51,8 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+          PAGES_REPO_NWO: 'MerkleTree-US/merkletreelabs.com'
+        JEKYLL_GITHUB_TOKEN: ${{ secrets.githubkey }}
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
