--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           JEKYLL_ENV: production
           PAGES_REPO_NWO: 'MerkleTree-US/merkletreelabs.com'
-          JEKYLL_GITHUB_TOKEN: ${{ secrets.githubkey }}
+          JEKYLL_GITHUB_TOKEN: ${{ secrets.JEKYLL_GITHUB_TOKEN }}
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
