--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ analytics_id            :
 # - algolia v4 https://www.algolia.com/ - needs further configuration
 # - google custom search engine https://cse.google.es/
 search:
-  provider              : lunr #Select a provider for enable search: lunr, algolia, google
+  provider              : #lunr #Select a provider for enable search: lunr, algolia, google
   label                 :  #default ["Search"] Text on navbar when search is enabled
   landing_page          :  #default ["/search"] Link on navbar
   lunr_maxwords         :  #default [30] lunr only - May slow down your site build
@@ -110,25 +110,27 @@ comments:
 #   "brand" options would be set on the left side of your navbar
 #   "nav" would be set on the right side. Two-level nav links available
 navbar:
-  style     :  dual #default is the classical top navbar, set "fab" for a floating action button navbar or "dual"
+  style     :  fab #default is the classical top navbar, set "fab" for a floating action button navbar or "dual"
   expand    :  # At which device size expand the navbar menu. default[md] https://getbootstrap.com/docs/4.5/layout/overview/
   brand:
     title   :  Home # Title in navbar
     url     :  # default["url/baseurl"]
-    img     :  # An small image, try 30x30px
+    img     :  /assets/img/logo/logo_no-text_100.webp # An small image, try 30x30px
   nav:
-  - title   : Blog # Label
-    url     : /blog/ # url  
-  - title   : Extras
-    child   :
-      - title : Tags
-        url   : /tags
-      - title : Categories
-        url   : /categories
-      - title : Archive
-        url   : /archive
-      - title : Current skin
-        url   : /current-skin
+#  - title   : Blog # Label
+#    url     : /blog/ # url  
+  - title   : About # Label
+    url     : /about/ # url  
+#  - title   : Extras
+#    child   :
+#      - title : Tags
+##        url   : /tags
+#      - title : Categories
+#        url   : /categories
+#      - title : Archive
+#        url   : /archive
+#      - title : Current skin
+#        url   : /current-skin
 #  - title   : # Label submenu
 #    child:   
 #    - title: # Child label   
@@ -165,7 +167,7 @@ chulapa-skin:
     danger: "#cf222e"     
     info: "#8250df"     
     black: "#0d1117"     
-    body-bg: "#fff"     
+    body-bg: "#deedf8"     
     body-color: "#24292f"     
     headings-font-family: "'Inter', Roboto"   
     font-family-base: "'Inter Tight', Mukta "    
